--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
         <div class="footer-bawah-kanan">
           <p>Trams & Condition</p>
           <p>Privacy Policy</p>
-          <p>Cintact Us</p>
+          <p>Contact Us</p>
         </div>
       </div>
     </div>
